Aula 07: fazendo CRUD da tabela de filmes recebendo a FK de classificação
