# aula 07/model/DAO/filme/filme.js
@@ -15,7 +15,7 @@ const knexConex = knex(knexConfig.development)
 //função para inserir dados na tabela de filme
 const insertFilme = async (filme) =>{
     try {
-        let sql = ` INSERT INTO tbl_filme (nome, data_lancamento, duracao, sinopse, avaliacao, valor, capa)
+        let sql = ` INSERT INTO tbl_filme (nome, data_lancamento, duracao, sinopse, avaliacao, valor, capa, id_classificacao)
                 VALUES (
                 '${filme.nome}',
 		        '${filme.data_lancamento}',
@@ -23,7 +23,8 @@ const insertFilme = async (filme) =>{
                 '${filme.sinopse}',
                 if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
                 '${filme.valor}',
-                '${filme.capa}'
+                '${filme.capa}',
+                ${filme.id_classificacao}
                 );`
 
         //executar o script sql no banco de dados
@@ -46,13 +47,14 @@ const updateFilme = async (filme) =>{
         //script para atualizar dados do banco
 
         let sql = `UPDATE tbl_filme set 
-	            nome            = "${filme.nome}",
-                data_lancamento = "${filme.data_lancamento}",
-                duracao         = "${filme.duracao}",
-                sinopse         = "${filme.sinopse}",
-                avaliacao       = if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
-                valor           = "${filme.valor}",
-                capa            = "${filme.capa}"
+	            nome                = "${filme.nome}",
+                data_lancamento     = "${filme.data_lancamento}",
+                duracao             = "${filme.duracao}",
+                sinopse             = "${filme.sinopse}",
+                avaliacao           = if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
+                valor               = "${filme.valor}",
+                capa                = "${filme.capa}",
+                id_classificacao    = ${filme.id_classificacao}
                WHERE id = ${filme.id}`
 
         //execução do script no banco
